--- a/Project/project/DAS/Example/Dapper/Views/Test/Index.cshtml
+++ b/Project/project/DAS/Example/Dapper/Views/Test/Index.cshtml
@@ -16,7 +16,7 @@
         <ul>
             @foreach (var item in Model)
             {
-                <li>@(item.Name)--@(item.ColumnList[0].ColumnCatid)</li>
+                <li>@(item.Name)</li>
             }
         </ul>
     </div>
